[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etherscanio"
dynamic = ["version"]
description = "Lightweight Python wrapper for the Etherscan v2 Multi-chain API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Athen Traverne", email = "athen@aetherionresearch.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "httpx",
]

[project.urls]
Documentation = "https://github.com/traverne/etherscanio#readme"
Issues = "https://github.com/traverne/etherscanio/issues"
Source = "https://github.com/traverne/etherscanio"

[tool.hatch.version]
path = "src/etherscan/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=etherscan {args:tests}"
cov-report = [
    "pytest --cov=etherscan --cov-report=html {args:tests}",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.envs.lint.scripts]
check = [
    "ruff check src tests",
    "black --check src tests",
    "mypy src",
]
fmt = [
    "black src tests",
    "ruff check --fix src tests",
]
